--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "next": "15.0.1",
