--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "next": "15.0.1",
